Add <hr> section to navigation.html

--- a/kiss-css-website/docs/components/navigation.html
+++ b/kiss-css-website/docs/components/navigation.html
@@ -396,6 +396,38 @@
                 </button>
             </footer>
         </section>
+
+        <section>
+            <h2 id="horizontal-rule">Horizontal Rule</h2>
+            <p>Add a <code class="language-html">&lt;hr /&gt;</code> to the navbar to get a vertical separator between
+                links.
+            </p>
+            <article>
+                <nav>
+                    <ul>
+                        <li><a>Home</a></li>
+                        <hr />
+                        <li><a>About</a></li>
+                    </ul>
+                </nav>
+            </article>
+            <footer role="copy">
+                <pre>
+                    <code class="language-html">
+&lt;nav&gt;
+    &lt;ul&gt;
+        &lt;li&gt;&lt;a&gt;Home&lt;/a&gt;&lt;/li&gt;
+        &lt;hr /&gt;
+        &lt;li&gt;&lt;a&gt;About&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+&lt;/nav&gt;
+                    </code>
+                </pre>
+                <button class="text" data-tooltip="Copy" data-placement="left">
+                    <div class="data-icon">content_copy</div>
+                </button>
+            </footer>
+        </section>
     </main>
 
     <!-- Menu -->
