--- a/kiss-css-website/css/prism.css
+++ b/kiss-css-website/css/prism.css
@@ -1,3 +1,256 @@
 /* PrismJS 1.29.0
 https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css */
-code[class*=language-],pre[class*=language-]{color:#ccc;background:0 0;font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}pre[class*=language-]{overflow:auto}:not(pre)>code[class*=language-],pre[class*=language-]{background:#2d2d2d;}:not(pre)>code[class*=language-]{border-radius:.3em;white-space:normal}.token.block-comment,.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#999}.token.punctuation{color:#ccc}.token.attr-name,.token.deleted,.token.namespace,.token.tag{color:#e2777a}.token.function-name{color:#6196cc}.token.boolean,.token.function,.token.number{color:#f08d49}.token.class-name,.token.constant,.token.property,.token.symbol{color:#f8c555}.token.atrule,.token.builtin,.token.important,.token.keyword,.token.selector{color:#cc99cd}.token.attr-value,.token.char,.token.regex,.token.string,.token.variable{color:#7ec699}.token.entity,.token.operator,.token.url{color:#67cdcc}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}.token.inserted{color:green}
+
+[data-theme="dark"] code[class*=language-],
+[data-theme="dark"] pre[class*=language-] {
+    color: #ccc;
+    background: 0 0;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+[data-theme="dark"] pre[class*=language-] {
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+}
+
+[data-theme="dark"] :not(pre)>code[class*=language-],
+[data-theme="dark"] pre[class*=language-] {
+    background: var(--md-sys-color-surface-container-low);
+}
+
+[data-theme="dark"] :not(pre)>code[class*=language-] {
+    padding: .1em;
+    border-radius: .3em;
+    white-space: normal;
+}
+
+[data-theme="dark"] .token.block-comment,
+[data-theme="dark"] .token.cdata,
+[data-theme="dark"] .token.comment,
+[data-theme="dark"] .token.doctype,
+[data-theme="dark"] .token.prolog {
+    color: #999;
+}
+
+[data-theme="dark"] .token.punctuation {
+    color: #ccc;
+}
+
+[data-theme="dark"] .token.attr-name,
+[data-theme="dark"] .token.deleted,
+[data-theme="dark"] .token.namespace,
+[data-theme="dark"] .token.tag {
+    color: #e2777a;
+}
+
+[data-theme="dark"] .token.function-name {
+    color: #6196cc;
+}
+
+[data-theme="dark"] .token.boolean,
+[data-theme="dark"] .token.function,
+[data-theme="dark"] .token.number {
+    color: #f08d49;
+}
+
+[data-theme="dark"] .token.class-name,
+[data-theme="dark"] .token.constant,
+[data-theme="dark"] .token.property,
+[data-theme="dark"] .token.symbol {
+    color: #f8c555;
+}
+
+[data-theme="dark"] .token.atrule,
+[data-theme="dark"] .token.builtin,
+[data-theme="dark"] .token.important,
+[data-theme="dark"] .token.keyword,
+[data-theme="dark"] .token.selector {
+    color: #cc99cd;
+}
+
+[data-theme="dark"] .token.attr-value,
+[data-theme="dark"] .token.char,
+[data-theme="dark"] .token.regex,
+[data-theme="dark"] .token.string,
+[data-theme="dark"] .token.variable {
+    color: #7ec699;
+}
+
+[data-theme="dark"] .token.entity,
+[data-theme="dark"] .token.operator,
+[data-theme="dark"] .token.url {
+    color: #67cdcc;
+}
+
+[data-theme="dark"] .token.bold,
+[data-theme="dark"] .token.important {
+    font-weight: 700;
+}
+
+[data-theme="dark"] .token.italic {
+    font-style: italic;
+}
+
+[data-theme="dark"] .token.entity {
+    cursor: help;
+}
+
+[data-theme="dark"] .token.inserted {
+    color: green;
+}
+
+
+
+/* PrismJS 1.29.0
+https://prismjs.com/download.html#themes=prism&languages=markup+css */
+
+[data-theme="light"] code[class*=language-],
+[data-theme="light"] pre[class*=language-] {
+    color: #000;
+    background: 0 0;
+    text-shadow: 0 1px #fff;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+[data-theme="light"] code[class*=language-] ::-moz-selection,
+[data-theme="light"] code[class*=language-]::-moz-selection,
+[data-theme="light"] pre[class*=language-] ::-moz-selection,
+[data-theme="light"] pre[class*=language-]::-moz-selection {
+    text-shadow: none;
+    background: #b3d4fc;
+}
+
+[data-theme="light"] code[class*=language-] ::selection,
+[data-theme="light"] code[class*=language-]::selection,
+[data-theme="light"] pre[class*=language-] ::selection,
+[data-theme="light"] pre[class*=language-]::selection {
+    text-shadow: none;
+    background: #b3d4fc;
+}
+
+@media print {
+
+    [data-theme="light"] code[class*=language-],
+    [data-theme="light"] pre[class*=language-] {
+        text-shadow: none;
+    }
+}
+
+[data-theme="light"] pre[class*=language-] {
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+}
+
+[data-theme="light"] :not(pre)>code[class*=language-],
+[data-theme="light"] pre[class*=language-] {
+    background: var(--md-sys-color-surface-container-low);
+}
+
+[data-theme="light"] :not(pre)>code[class*=language-] {
+    padding: .1em;
+    border-radius: .3em;
+    white-space: normal;
+}
+
+[data-theme="light"] .token.cdata,
+[data-theme="light"] .token.comment,
+[data-theme="light"] .token.doctype,
+[data-theme="light"] .token.prolog {
+    color: #708090;
+}
+
+[data-theme="light"] .token.punctuation {
+    color: #999;
+}
+
+[data-theme="light"] .token.namespace {
+    opacity: .7;
+}
+
+[data-theme="light"] .token.boolean,
+[data-theme="light"] .token.constant,
+[data-theme="light"] .token.deleted,
+[data-theme="light"] .token.number,
+[data-theme="light"] .token.property,
+[data-theme="light"] .token.symbol,
+[data-theme="light"] .token.tag {
+    color: #905;
+}
+
+[data-theme="light"] .token.attr-name,
+[data-theme="light"] .token.builtin,
+[data-theme="light"] .token.char,
+[data-theme="light"] .token.inserted,
+[data-theme="light"] .token.selector,
+[data-theme="light"] .token.string {
+    color: #690;
+}
+
+[data-theme="light"] .language-css .token.string,
+[data-theme="light"] .style .token.string,
+[data-theme="light"] .token.entity,
+[data-theme="light"] .token.operator,
+[data-theme="light"] .token.url {
+    color: #9a6e3a;
+    background: hsla(0, 0%, 100%, .5);
+}
+
+[data-theme="light"] .token.atrule,
+[data-theme="light"] .token.attr-value,
+[data-theme="light"] .token.keyword {
+    color: #07a;
+}
+
+[data-theme="light"] .token.class-name,
+[data-theme="light"] .token.function {
+    color: #dd4a68;
+}
+
+[data-theme="light"] .token.important,
+[data-theme="light"] .token.regex,
+[data-theme="light"] .token.variable {
+    color: #e90;
+}
+
+[data-theme="light"] .token.bold,
+[data-theme="light"] .token.important {
+    font-weight: 700;
+}
+
+[data-theme="light"] .token.italic {
+    font-style: italic;
+}
+
+[data-theme="light"] .token.entity {
+    cursor: help;
+}
