--- a/kiss-css-website/docs/components/tooltip.html
+++ b/kiss-css-website/docs/components/tooltip.html
@@ -170,6 +170,7 @@
     <script type="module" src="../../js/toc.js"></script>
     <script type="module" src="../../js/copy.js"></script>
     <script type="module" src="../../js/prism.js"></script>
+    <script type="module" src="../../js/theme.js"></script>
 </body>
 
 </html>
