Add .fit utility to docs on card.html

--- a/kiss-css-website/docs/components/card.html
+++ b/kiss-css-website/docs/components/card.html
@@ -73,6 +73,10 @@
             <article class="state-layer bg-primary">
                 <header>Header</header>Card<footer>Footer</footer>
             </article>
+
+            <h3>.fit</h3>
+            <p>Fit the card's width to the content size.
+            <article class="fit">Card</article>
         </section>
 
         <!-- Dynamic Sizing -->
