--- a/css/global.css
+++ b/css/global.css
@@ -8,15 +8,15 @@
 
 [role="copy"] {
     background-color: var(--md-sys-color-surface-container-low);
-    padding: var(--kiss-card-border-radius);
+    padding: var(--rad-card-border-radius);
 }
 
 :not(article)>footer[role="copy"] {
-    border-radius: var(--kiss-card-border-radius);
+    border-radius: var(--rad-card-border-radius);
 }
 
 :not(footer)[role="copy"] {
-    border-radius: var(--kiss-border-radius);
+    border-radius: var(--rad-border-radius);
 }
 
 [role="copy"] button {
