--- a/docs/components/card.html
+++ b/docs/components/card.html
@@ -9,12 +9,12 @@
     <link href="../../css/global.css" rel="stylesheet" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>KISS CSS - Card</title>
+    <title>RAD CSS - Card</title>
 </head>
 
 <body>
     <!-- Navbar -->
-    <header class="wide"> <kiss-navbar></kiss-navbar> </header>
+    <header class="wide"> <rad-navbar></rad-navbar> </header>
 
     <!-- Main -->
     <main>
@@ -221,25 +221,25 @@
             <p>It is possible to turn off the dynamic padding and border radius of cards.</p>
             <p>Simply set <code clsss="language-html">$dynamic-card-padding: false;</code>
                 in <a
-                    href="https://github.com/JDRadatti/kiss-css/blob/main/sass/abstracts/_config.scss">/sass/abstracts/_config.scss</a>.
+                    href="https://github.com/JDRadatti/rad-css/blob/main/sass/abstracts/_config.scss">/sass/abstracts/_config.scss</a>.
         </section>
 
     </main>
 
     <!-- Menu -->
     <aside>
-        <kiss-docs-menu></kiss-docs-menu>
+        <rad-docs-menu></rad-docs-menu>
     </aside>
 
     <!-- Toc -->
     <aside>
-        <kiss-toc></kiss-toc>
+        <rad-toc></rad-toc>
     </aside>
 
 
     <!-- Footer -->
     <footer>
-        <kiss-footer></kiss-footer>
+        <rad-footer></rad-footer>
     </footer>
 
     <!-- JavaScript -->
