--- a/docs/components/dropdown.html
+++ b/docs/components/dropdown.html
@@ -9,12 +9,12 @@
     <link href="../../css/global.css" rel="stylesheet" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>KISS CSS - Dropdown</title>
+    <title>RAD CSS - Dropdown</title>
 </head>
 
 <body>
     <!-- Navbar -->
-    <header class="wide"> <kiss-navbar></kiss-navbar> </header>
+    <header class="wide"> <rad-navbar></rad-navbar> </header>
 
     <!-- Main -->
     <main>
@@ -152,18 +152,18 @@
 
     <!-- Menu -->
     <aside>
-        <kiss-docs-menu></kiss-docs-menu>
+        <rad-docs-menu></rad-docs-menu>
     </aside>
 
     <!-- Toc -->
     <aside>
-        <kiss-toc></kiss-toc>
+        <rad-toc></rad-toc>
     </aside>
 
 
     <!-- Footer -->
     <footer>
-        <kiss-footer></kiss-footer>
+        <rad-footer></rad-footer>
     </footer>
 
     <!-- JavaScript -->
